--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Node template
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen### Node template
 # Logs
 logs
 *.log
