--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "vuex": "2.3.1"
   },
   "devDependencies": {
+    "commander": "^2.11.0",
+    "fs.extra": "^1.3.2",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -41,15 +43,14 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
     "chalk": "1.1.3",
-    "commander": "^2.11.0",
     "connect-history-api-fallback": "1.3.0",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "5.0.1",
     "css-loader": "0.28.4",
-    "eslint": "^3.19.0",
+    "eslint": "3.19.0",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-import-resolver-webpack": "0.8.1",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "1.7.1",
     "eslint-plugin-html": "3.0.0",
     "eslint-plugin-import": "2.3.0",
     "eventsource-polyfill": "0.9.6",
@@ -57,7 +58,6 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
-    "fs.extra": "^1.3.2",
     "function-bind": "1.1.0",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
